# fetch_houston2013

./: .gitignore  README.md  README.zh-hans.md  pyproject.toml
.github/workflows/: uv-publish.yml  uv-test.yml
data/: 2013_IEEE_GRSS_DF_Contest_Samples_VA.txt
etc/: bump-version.bash
fetch_houston2013/: Houston2013.py  fetch_houston2013.py  torch.py
fetch_muufl/: muufl.py
src/fetch_houston2013/: __about__.py  __init__.py  fetch_augsburg.py  fetch_houston2013.py  fetch_muufl.py  fetch_trento.py  muufl.py
src/fetch_houston2013/core/: _fetch_houston2013mmrs.py  common.py  fetch_houston2013.py  fetch_muufl.py  fetch_trento.py
src/fetch_houston2013/torch/: __init__.py  common_hsi_dsm_dataset.py  datasets.py
src/fetch_houston2013/util/: __init__.py  fileio.py  lbl2rgb.py  split_spmatrix.py
tests/: _dev_test.py  demo_torch.py  test.py  test1.py
