[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fetch-houston2013"
dynamic = ["version"]
description = 'Download and load Houston 2013 Dataset'
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "songyz2023", email = "songyz2023dlut@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jaxtyping>=0.2.0",
  "numpy>=1.24.0",
  "rasterio>=1.2.0",
  "scikit-image>=0.21.0",
  "scipy>=1.10.0",
]

[project.urls]
Documentation = "https://github.com/songyz2023/fetch-houston2013#readme"
Issues = "https://github.com/songyz2023/fetch-houston2013/issues"
Source = "https://github.com/songyz2023/fetch-houston2013"

[tool.hatch.version]
path = "src/fetch_houston2013/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/fetch_houston2013 tests}"

[tool.coverage.run]
source_pkgs = ["fetch_houston2013", "tests"]
branch = true
parallel = true
omit = [
  "src/fetch_houston2013/__about__.py",
]

[tool.coverage.paths]
fetch_houston2013 = ["src/fetch_houston2013", "*/fetch-houston2013/src/fetch_houston2013"]
tests = ["tests", "*/fetch-houston2013/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
